...
                            android:layout_height="wrap_content"
                            android:layout_marginStart="150dp"
                            android:layout_marginTop="12dp"
                            android:text="Image Ratio" />

                        <RadioGroup
                            android:id="@+id/pieces"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp">

                            <RadioButton
                                android:id="@+id/radioTraditional"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Jigsaw" />

                            <RadioButton
                                android:id="@+id/radioSquare"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="Square" />

                        </RadioGroup>

                        <RadioGroup
                            android:id="@+id/ratio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_marginStart="150dp">

                            <RadioButton
                                android:id="@+id/radioStretch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Stretch" />

                            <RadioButton
                                android:id="@+id/radioFit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
...
                            android:clickable="false"
                            android:contextClickable="false"
                            android:max="10"
                            android:min="2" />

                        <TextView
                            android:id="@+id/txtHard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="43dp"
                            android:text="Hard" />

                        <TextView
                            android:id="@+id/txtLevel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/seekerbar"
...
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnCreate"
            android:text="Create"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnCancel"
            android:text="Cancel"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
...
