...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout">

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_alignParentBottom="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btn_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_image_black_24dp"
                app:fab_size="mini"
                app:fab_colorNormal="@color/colorAccent"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btn_ghost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_insert_emoticon_black_24dp"
                app:fab_size="mini"
                app:fab_colorNormal="@color/colorAccent"/>

...

            </com.github.clans.fab.FloatingActionMenu>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/linear">

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/menu_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:menu_buttonSpacing="0dp"
                app:menu_colorNormal="@color/colorAccent"
                app:menu_icon="@drawable/ic_color_lens_black_24dp"
                app:menu_fab_size="mini">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btn_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_size="mini"
                    app:fab_colorNormal="@android:color/white"/>

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btn_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_size="mini"
                    app:fab_colorNormal="@android:color/black"/>

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btn_magenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_size="mini"
                    app:fab_colorNormal="@color/Magenta"/>

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btn_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_size="mini"
                    app:fab_colorNormal="@color/blue"/>


...
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/linear_back">

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/menu_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:menu_buttonSpacing="0dp"
                app:menu_colorNormal="@color/colorAccent"
                app:menu_icon="@drawable/ic_share_black_24dp"
                app:menu_fab_size="mini">
...
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="74dp" />

        <TextView
            android:id="@+id/playPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="14dp"
            android:text="|| pause ||" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
...
